# distributed-task-queue

./: LICENSE  README.md  distributed-task-queue.cabal  shell.nix  stack.yaml
app/: MainSend.hs  MainWorker.hs
data/: config.yaml
docs/: developer-documentation.md  how-to-kafka.md
src/: Core.hs  Domain.hs  Main.hs  Server.hs  Worker.hs
src/Distributed/: TaskQueue.hs
src/Distributed/TaskQueue/: Core.hs  Registry.hs  Worker.hs
src/Domain/: Types.hs
src/Examples/: Payloads.hs
tests/: .RegistrySpec.hs.swp  CoreSpec.hs  PayloadsSpec.hs  RegistrySpec.hs
