cabal-version:       2.2

name:                distributed-task-queue
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/distributed-task-queue#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Domain.Types
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       stm,
                       containers >= 0.6.8
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints