cabal-version: 2.2

name:                   distributed-task-queue
version:                5.3.0
category:               Database
author:                 Tymofii Shchetilin <tymofii.shchetilin@gmail.com>
maintainer:             Tymofii Shchetilin <tymofii.shchetilin@gmail.com>
license:                MIT
license-file:           LICENSE
tested-with:            GHC == 8.10.2, GHC == 8.8.3, GHC == 8.6.5, GHC == 8.4.4, GHC == 9.10.1
build-type:             Simple
extra-source-files:     README.md

executable distributed-task-queue
  main-is:              Main.hs
  hs-source-dirs:       src
  ghc-options:          -threaded -rtsopts
  build-depends:        base >=4.6 && <5
                      , bytestring
                      , hw-kafka-client
                      , text
  other-modules:
                        Worker
                        Server
  default-language:     Haskell2010