cabal-version: 3.4

name:                   distributed-task-queue
version:                5.3.1
author:                 Tymofii Shchetilin
license:                MIT
category:               Database
build-type:             Simple
extra-source-files:     README.md
tested-with:            GHC == 8.10.2
data-files:             data/config.yaml

-- Library --------------------------------------------------------
library
  exposed-modules:      Domain
                      , Distributed.TaskQueue
                      , Distributed.TaskQueue.Core
                      , Distributed.TaskQueue.Registry
                      , Distributed.TaskQueue.Worker
                      , Examples.Payloads
  hs-source-dirs:       src
  build-depends:        base       >=4.6 && <5
                      , bytestring
                      , text
                      , aeson
                      , uuid
                      , yaml
                      , unordered-containers
                      , hashable            
                      , hw-kafka-client
  default-language:   Haskell2010

-- Executables ----------------------------------------------------
executable dtq-send
  main-is:            MainSend.hs
  hs-source-dirs:     app
  ghc-options:        -threaded -rtsopts
  build-depends:      base
                    , aeson
                    , yaml
                    , text              
                    , hw-kafka-client   
                    , distributed-task-queue

  default-language:   Haskell2010

executable dtq-worker
  main-is:            MainWorker.hs
  hs-source-dirs:     app
  ghc-options:        -threaded -rtsopts
  build-depends:   base
                 , text
                 , distributed-task-queue
  default-language:   Haskell2010